# yearbook_scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  rename.py  summary.py
pdf_scraper/: scraper.py
pdf_scraper/tools/: helpers.py  pdf.py  tables.py
scraper/: directory_scraper.py  file_scraper.py
scraper/tools/: ocr.py  ocr_pdfs.py  pdf_page_utils.py  tablelist_utils.py  text_pdfs.py
tests/: conftest.py  test_directory_scraper.py  test_file_scraper.py  test_ocr.py  test_page_utils.py  test_table_list_logic.py  test_text_functions.py
