[project]
name = "pdf_scraper"
version = "0.0.1"
authors = [
  { name="Jeffrey Stein", email="js6176@columbia.edu" },
]
description = "A package to parse pdfs within a specific directory"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }